# Dawn

./: .gitignore  .gitmodules  CMakeLists.txt  DAWN_FLUENT_ALIGNMENT.md  README.md  dawn.md
.github/workflows/: build.yml  ci.yml
.trae/documents/: dawn_alignment_plan.md
app/: CMakeLists.txt  main.cpp
core/: CMakeLists.txt
core/include/dawn/core/auth/: account_service.h  microsoft_identity_service.h  microsoft_oauth_service.h  offline_account_service.h
core/include/dawn/core/backup/: backup_service.h
core/include/dawn/core/content/: content_install_service.h
core/include/dawn/core/diagnostics/: diagnostics_service.h  performance_advisor.h
core/include/dawn/core/download/: download_service.h
core/include/dawn/core/interfaces/: content_provider.h  default_launcher_runtime.h  launcher_runtime.h  loader_installer.h
core/include/dawn/core/java/: java_service.h
core/include/dawn/core/loaders/: fabric_installer.h  forge_installer.h  loader_service.h  neoforge_installer.h  quilt_installer.h
core/include/dawn/core/local/: local_package_service.h
core/include/dawn/core/minecraft/: library_resolver.h  minecraft_service.h  version_package.h
core/include/dawn/core/model/: content_lock.h  content_types.h  enums.h  instance_manifest.h  instance_workbench.h  launch_types.h  preflight.h  task_types.h
core/include/dawn/core/pipeline/: task_pipeline.h
core/include/dawn/core/provider/: modrinth_provider.h  optifine_adapter.h
core/include/dawn/core/serialization/: manifest_codec.h
core/include/dawn/core/service/: instance_service.h  preflight_service.h  task_queue.h
core/include/dawn/core/settings/: settings_service.h
core/include/dawn/core/storage/: instance_repository.h  sqlite_database.h  task_history_repository.h
core/src/auth/: account_service.cpp  microsoft_identity_service.cpp  microsoft_oauth_service.cpp  offline_account_service.cpp
core/src/backup/: backup_service.cpp
core/src/content/: content_install_service.cpp
core/src/diagnostics/: diagnostics_service.cpp  performance_advisor.cpp
core/src/download/: download_service.cpp
core/src/interfaces/: default_launcher_runtime.cpp
core/src/java/: java_service.cpp
core/src/loaders/: fabric_installer.cpp  forge_installer.cpp  loader_service.cpp  neoforge_installer.cpp  quilt_installer.cpp
core/src/local/: local_package_service.cpp
core/src/minecraft/: library_resolver.cpp  minecraft_service.cpp  version_package.cpp
core/src/model/: content_lock.cpp  content_types.cpp  instance_manifest.cpp  instance_workbench.cpp  launch_types.cpp  preflight.cpp  task_types.cpp
core/src/pipeline/: task_pipeline.cpp
core/src/provider/: modrinth_provider.cpp  optifine_adapter.cpp
core/src/serialization/: manifest_codec.cpp
core/src/service/: instance_service.cpp  preflight_service.cpp  task_queue.cpp
core/src/settings/: settings_service.cpp
core/src/storage/: instance_repository.cpp  sqlite_database.cpp  task_history_repository.cpp
examples/: default-settings.json
infra/: CMakeLists.txt
infra/include/dawn/infra/archive/: zip_archive.h
infra/include/dawn/infra/fs/: file_system.h
infra/include/dawn/infra/hash/: sha256.h
infra/include/dawn/infra/json/: simple_json.h
infra/include/dawn/infra/net/: curl_http_client.h  http_client.h  http_client_factory.h  win_http_client.h
infra/src/archive/: zip_archive.cpp
infra/src/fs/: file_system.cpp
infra/src/hash/: sha256.cpp
infra/src/json/: simple_json.cpp
infra/src/net/: curl_http_client.cpp  http_client_factory.cpp  win_http_client.cpp
tests/: CMakeLists.txt  account_token_state_test.cpp  app_view_model_test.cpp  backup_service_test.cpp  content_install_service_test.cpp  diagnostics_service_test.cpp  download_service_test.cpp  global_settings_test.cpp  hash_test.cpp  http_client_factory_test.cpp  instance_manifest_test.cpp  local_package_service_test.cpp  microsoft_identity_service_test.cpp  microsoft_oauth_service_test.cpp  modrinth_provider_protocol_test.cpp  preflight_test.cpp  runtime_services_test.cpp  task_pipeline_test.cpp
ui/: CMakeLists.txt
ui/qml/: main.qml  main_fluent.qml
ui/qml/components/: DawnCard.qml  DawnMetricTile.qml  DropZone.qml  EventCenterPanel.qml  LoaderSelector.qml  VersionSelector.qml  WizardStepIndicator.qml
ui/qml/dialogs/: DragDropInstallDialog.qml  InstanceCreationWizard.qml
ui/qml/pages/: ContentCenterPage.qml  DownloadQueuePage.qml  FirstLaunchWizardPage.qml  HomePage.qml  InstancesPage.qml  LogsRepairPage.qml  SettingsPage.qml
ui/qml/shell/: AppShell.qml
ui/viewmodels/: app_view_model.cpp  app_view_model.h
